--- a/02-Sprite/02-Sprite.vcxproj
+++ b/02-Sprite/02-Sprite.vcxproj
@@ -82,6 +82,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
+      <AdditionalIncludeDirectories>D:\Im done\gamedev-intro-tutorials\02-Sprite\TSXParser-master\src;D:\Im done\gamedev-intro-tutorials\02-Sprite\TMXParser-master\src;D:\Im done\gamedev-intro-tutorials\02-Sprite\TMXParser-master\include;D:\Im done\gamedev-intro-tutorials\02-Sprite\TSXParser-master\include;D:\cpp-base64-master\cpp-base64-master;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <AdditionalDependencies>d3d10.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -136,6 +137,8 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Sprites.cpp" />
     <ClCompile Include="Textures.cpp" />
+    <ClCompile Include="TMXParser.cpp" />
+    <ClCompile Include="TSXParser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
@@ -149,12 +152,25 @@
     <ClInclude Include="Sprites.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Textures.h" />
+    <ClInclude Include="TMXParser-master\include\rapidxml\rapidxml.hpp" />
+    <ClInclude Include="TMXParser-master\include\rapidxml\rapidxml_iterators.hpp" />
+    <ClInclude Include="TMXParser-master\include\rapidxml\rapidxml_print.hpp" />
+    <ClInclude Include="TMXParser-master\include\rapidxml\rapidxml_utils.hpp" />
+    <ClInclude Include="TMXParser-master\include\TMXParser.h" />
+    <ClInclude Include="TSXParser-master\include\rapidxml\rapidxml.hpp" />
+    <ClInclude Include="TSXParser-master\include\rapidxml\rapidxml_iterators.hpp" />
+    <ClInclude Include="TSXParser-master\include\rapidxml\rapidxml_print.hpp" />
+    <ClInclude Include="TSXParser-master\include\rapidxml\rapidxml_utils.hpp" />
+    <ClInclude Include="TSXParser-master\include\TSXParser.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="textures\mario.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="TMXParser-master\include\rapidxml\manual.html" />
+    <None Include="TMXParser-master\TMXParser.cbp" />
+    <None Include="TSXParser-master\include\rapidxml\manual.html" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
