jump over and stand on the top of color boxes

--- a/05-SceneManager/05-SceneManager.vcxproj
+++ b/05-SceneManager/05-SceneManager.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Goomba.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mario.cpp" />
+    <ClCompile Include="Nocollision.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Portal.cpp" />
@@ -162,6 +163,7 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Sprites.cpp" />
     <ClCompile Include="Textures.cpp" />
+    <ClCompile Include="Topbox.cpp" />
     <ClCompile Include="Tunnel.cpp" />
     <ClCompile Include="Utils.cpp" />
   </ItemGroup>
@@ -179,6 +181,7 @@
     <ClInclude Include="Goomba.h" />
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mario.h" />
+    <ClInclude Include="Nocollision.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="PlayScene.h" />
     <ClInclude Include="Portal.h" />
@@ -189,6 +192,7 @@
     <ClInclude Include="Sprites.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Textures.h" />
+    <ClInclude Include="Topbox.h" />
     <ClInclude Include="Tunnel.h" />
     <ClInclude Include="Utils.h" />
   </ItemGroup>
