add mushroom and spawn it

--- a/05-SceneManager/05-SceneManager.vcxproj
+++ b/05-SceneManager/05-SceneManager.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Goomba.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mario.cpp" />
+    <ClCompile Include="Mushroom.cpp" />
     <ClCompile Include="Nocollision.cpp" />
     <ClCompile Include="Platform.cpp" />
     <ClCompile Include="PlayScene.cpp" />
@@ -181,6 +182,7 @@
     <ClInclude Include="Goomba.h" />
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mario.h" />
+    <ClInclude Include="Mushroom.h" />
     <ClInclude Include="Nocollision.h" />
     <ClInclude Include="Platform.h" />
     <ClInclude Include="PlayScene.h" />
