--- a/Mario-game/Mario-game.vcxproj.filters
+++ b/Mario-game/Mario-game.vcxproj.filters
@@ -104,9 +104,6 @@
     <ClCompile Include="Platform.cpp">
       <Filter>GameObject\Platform</Filter>
     </ClCompile>
-    <ClCompile Include="Koopa.cpp">
-      <Filter>GameObject\Enemy\Koopa</Filter>
-    </ClCompile>
     <ClCompile Include="Brick.cpp">
       <Filter>GameObject\Brick</Filter>
     </ClCompile>
@@ -120,6 +117,12 @@
       <Filter>GameObject\Items</Filter>
     </ClCompile>
     <ClCompile Include="DCoin.cpp">
+      <Filter>GameObject\Items</Filter>
+    </ClCompile>
+    <ClCompile Include="Koopa.cpp">
+      <Filter>GameObject\Items</Filter>
+    </ClCompile>
+    <ClCompile Include="Leaf.cpp">
       <Filter>GameObject\Items</Filter>
     </ClCompile>
   </ItemGroup>
@@ -212,6 +215,9 @@
       <Filter>GameObject\Items</Filter>
     </ClInclude>
     <ClInclude Include="DCoin.h">
+      <Filter>GameObject\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="Leaf.h">
       <Filter>GameObject\Items</Filter>
     </ClInclude>
   </ItemGroup>
